Fixed overflow scrollbar issue for values__paragraph

--- a/src/components/Values/Values.module.css
+++ b/src/components/Values/Values.module.css
@@ -31,6 +31,7 @@
 }
 .values__paragraph{
     flex:.5;
+    overflow: hidden;
 }
 @media (max-width: 550px){
     .values{
